force-app/main/default/objects/IT_Asset__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <label>Brand</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dell</fullName>
                <label>DELL</label>
            </value>
            <value>
                <fullName>HP</fullName>
            </value>
            <value>
                <fullName>Lenovo</fullName>
            </value>
            <value>
                <fullName>Apple</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>