force-app/main/default/objects/IT_Asset__c/fields/Brand_Misc__c.field-meta.xml
<CustomField>
    <fullName>Brand_Misc__c</fullName>
    <label>Brand (Misc)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>