force-app/main/default/objects/IT_Asset__c/fields/Brand_Monitor__c.field-meta.xml
<CustomField>
    <fullName>Brand_Monitor__c</fullName>
    <label>Monitor Brand</label>
    <length>20</length>
    <type>Text</type>
</CustomField>