force-app/main/default/objects/IT_Asset__c/fields/Computer_Processor__c.field-meta.xml
<CustomField>
    <fullName>Computer_Processor__c</fullName>
    <label>Computer Processor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>i5</fullName>
            </value>
            <value>
                <fullName>i7</fullName>
            </value>
            <value>
                <fullName>AMD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>