force-app/main/default/objects/IT_Asset__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>IT Assets</relationshipLabel>
    <relationshipName>IT_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>