force-app/main/default/objects/IT_Asset__c/fields/Equipment_Type__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Type__c</fullName>
    <label>Equipment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Camera</fullName>
            </value>
            <value>
                <fullName>4G Dongle</fullName>
            </value>
            <value>
                <fullName>Desktop</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>