force-app/main/default/objects/IT_Asset__c/fields/IMEI__c.field-meta.xml
<CustomField>
    <fullName>IMEI__c</fullName>
    <label>IMEI</label>
    <length>20</length>
    <type>Text</type>
</CustomField>