force-app/main/default/objects/IT_Asset__c/fields/In_Transit__c.field-meta.xml
<CustomField>
    <fullName>In_Transit__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tick if device is in transit. Please provide the shipment tracking number on the Chatter.</inlineHelpText>
    <label>In Transit</label>
    <type>Checkbox</type>
</CustomField>