force-app/main/default/objects/IT_Asset__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice</label>
    <referenceTo>Invoices__c</referenceTo>
    <relationshipLabel>IT Assets</relationshipLabel>
    <relationshipName>IT_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>