force-app/main/default/objects/IT_Asset__c/fields/is_spare__c.field-meta.xml
<CustomField>
    <fullName>is_spare__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if this is a spare laptop</inlineHelpText>
    <label>Is Spare</label>
    <type>Checkbox</type>
</CustomField>