force-app/main/default/objects/IT_Asset__c/fields/Last_Updated_Status__c.field-meta.xml
<CustomField>
    <fullName>Last_Updated_Status__c</fullName>
    <label>Last Updated Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Device In Use</fullName>
            </value>
            <value>
                <fullName>Received by OM</fullName>
            </value>
            <value>
                <fullName>Shipped to Hub Office</fullName>
            </value>
            <value>
                <fullName>Received at Hub Office</fullName>
            </value>
            <value>
                <fullName>Shipped to Support Office</fullName>
            </value>
            <value>
                <fullName>Received at Support Office</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>