force-app/main/default/objects/IT_Asset__c/fields/Link_to_Purchase__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Purchase__c</fullName>
    <label>Link to Purchase</label>
    <type>Url</type>
</CustomField>