force-app/main/default/objects/IT_Asset__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <label>Model</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Brand__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Personal Phone</fullName>
            </value>
            <value>
                <fullName>T14s</fullName>
            </value>
            <value>
                <fullName>T480s</fullName>
            </value>
            <value>
                <fullName>Yoga C740</fullName>
            </value>
            <value>
                <fullName>Carbon X1</fullName>
            </value>
            <value>
                <fullName>iPhone 6</fullName>
            </value>
            <value>
                <fullName>iPhone 6s</fullName>
            </value>
            <value>
                <fullName>iPhone 7</fullName>
            </value>
            <value>
                <fullName>iPhone 8</fullName>
            </value>
            <value>
                <fullName>iPhone 8 Plus</fullName>
            </value>
            <value>
                <fullName>iPhone SE</fullName>
            </value>
            <value>
                <fullName>X1 Yoga</fullName>
            </value>
            <value>
                <fullName>Ideapad</fullName>
            </value>
            <value>
                <fullName>iPhone 11</fullName>
            </value>
            <value>
                <fullName>iPad (6th Gen)</fullName>
            </value>
            <value>
                <fullName>iPad (7th Gen)</fullName>
            </value>
            <value>
                <fullName>iPad (8th Gen)</fullName>
            </value>
            <value>
                <fullName>iPad (9th Gen)</fullName>
            </value>
            <value>
                <fullName>X395</fullName>
            </value>
            <value>
                <fullName>Legion</fullName>
            </value>
            <value>
                <fullName>E14</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>