force-app/main/default/objects/IT_Asset__c/fields/Model_Misc__c.field-meta.xml
<CustomField>
    <fullName>Model_Misc__c</fullName>
    <label>Model (Misc)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>