force-app/main/default/objects/IT_Asset__c/fields/Office__c.field-meta.xml
<CustomField>
    <fullName>Office__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Location</label>
    <referenceTo>enrtcr__Site__c</referenceTo>
    <relationshipLabel>IT Assets</relationshipLabel>
    <relationshipName>IT_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>