force-app/main/default/objects/IT_Asset__c/fields/Printer__c.field-meta.xml
<CustomField>
    <fullName>Printer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Printer</label>
    <type>Checkbox</type>
</CustomField>