force-app/main/default/objects/IT_Asset__c/fields/RAM__c.field-meta.xml
<CustomField>
    <fullName>RAM__c</fullName>
    <label>RAM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>