force-app/main/default/objects/IT_Asset__c/fields/sendReminderOM__c.field-meta.xml
<CustomField>
    <fullName>sendReminderOM__c</fullName>
    <formula>DAY(TODAY()) = 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>checks whether it is the start of the month</inlineHelpText>
    <label>Send Reminder to OM</label>
    <type>Checkbox</type>
</CustomField>