force-app/main/default/objects/IT_Asset__c/fields/Shipment_State__c.field-meta.xml
<CustomField>
    <fullName>Shipment_State__c</fullName>
    <formula>Office__r.enrtcr__Business_State__c</formula>
    <label>Shipment State</label>
    <type>Text</type>
</CustomField>