force-app/main/default/objects/IT_Asset__c/fields/Storage_GB__c.field-meta.xml
<CustomField>
    <fullName>Storage_GB__c</fullName>
    <label>Storage (GB)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>