force-app/main/default/objects/IT_Asset__c/fields/To_be_shipped_to_Support_Office__c.field-meta.xml
<CustomField>
    <fullName>To_be_shipped_to_Support_Office__c</fullName>
    <defaultValue>false</defaultValue>
    <label>To be shipped to Support Office</label>
    <type>Checkbox</type>
</CustomField>