force-app/main/default/objects/IT_Asset__c/fields/Touch_Screen_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Touch_Screen_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Touch-Screen Enabled</label>
    <type>Checkbox</type>
</CustomField>