force-app/main/default/objects/IT_Asset__c/fields/User_Active__c.field-meta.xml
<CustomField>
    <fullName>User_Active__c</fullName>
    <formula>Assigned_To__r.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Active</label>
    <type>Checkbox</type>
</CustomField>