force-app/main/default/objects/IT_Asset__c/fields/User_Site__c.field-meta.xml
<CustomField>
    <fullName>User_Site__c</fullName>
    <formula>TEXT( Assigned_To__r.Site__c )</formula>
    <label>User Site</label>
    <type>Text</type>
</CustomField>