force-app/main/default/objects/IT_Asset__c/recordTypes/Internet.recordType-meta.xml
<RecordType>
    <fullName>Internet</fullName>
    <active>false</active>
    <label>Internet</label>
</RecordType>