force-app/main/default/objects/IT_Asset__c/recordTypes/iPad.recordType-meta.xml
<RecordType>
    <fullName>iPad</fullName>
    <active>true</active>
    <label>iPad</label>
</RecordType>