force-app/main/default/objects/IT_Asset__c/recordTypes/Laptop.recordType-meta.xml
<RecordType>
    <fullName>Laptop</fullName>
    <active>true</active>
    <label>Laptop</label>
</RecordType>