force-app/main/default/objects/IT_Asset__c/recordTypes/Monitor.recordType-meta.xml
<RecordType>
    <fullName>Monitor</fullName>
    <active>false</active>
    <label>Monitor</label>
</RecordType>