force-app/main/default/objects/IT_Asset__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Serial_Number__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Assigned_To__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Office__c</columns>
    <columns>Condition__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>