force-app/main/default/objects/IT_Asset__c/listViews/All_Internet.listView-meta.xml
<ListView>
    <fullName>All_Internet</fullName>
    <columns>NAME</columns>
    <columns>Assigned_To__c</columns>
    <columns>Condition__c</columns>
    <columns>User_Site__c</columns>
    <columns>Office__c</columns>
    <columns>Invoice__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>IT_Asset__c.Internet,IT_Asset__c.Misc</value>
    </filters>
    <label>All Internet</label>
</ListView>