force-app/main/default/objects/IT_Asset__c/listViews/All_iPad.listView-meta.xml
<ListView>
    <fullName>All_iPad</fullName>
    <columns>NAME</columns>
    <columns>Assigned_To__c</columns>
    <columns>Condition__c</columns>
    <columns>User_Site__c</columns>
    <columns>Office__c</columns>
    <columns>Invoice__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>IT_Asset__c.iPad</value>
    </filters>
    <filters>
        <field>Condition__c</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <label>All (iPad)</label>
</ListView>