force-app/main/default/objects/IT_Asset__c/listViews/Inactive_Assets.listView-meta.xml
<ListView>
    <fullName>Inactive_Assets</fullName>
    <columns>RECORDTYPE</columns>
    <columns>NAME</columns>
    <columns>Assigned_To__c</columns>
    <columns>User_Site__c</columns>
    <columns>User_Active__c</columns>
    <columns>Office__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>User_Active__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Assigned_To__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Inactive Assets</label>
</ListView>