force-app/main/default/objects/IT_Asset__c/listViews/Per_worker_view.listView-meta.xml
<ListView>
    <fullName>Per_worker_view</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Serial_Number__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Assigned_To__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Office__c</columns>
    <columns>Condition__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Assigned_To__c</field>
        <operation>contains</operation>
        <value>Simon W</value>
    </filters>
    <label>Per worker view</label>
</ListView>